--- a/services/issuer/src/authorize.html
+++ b/services/issuer/src/authorize.html
@@ -39,7 +39,7 @@
                 }
             });
             const data = resp.json();
-            window.location = `${get_params.get('redirect_uri')}?code=${code}&state=${state}`;
+            window.location = `${get_params.get('redirect_uri')}?code=${data.code}&state=${data.state}`;
         }
     </script>
 </html>
