--- a/services/issuer/src/authorize.html
+++ b/services/issuer/src/authorize.html
@@ -38,7 +38,7 @@
                     'Content-Type': 'application/json',
                 }
             });
-            const data = resp.json();
+            const data = await resp.json();
             window.location = `${get_params.get('redirect_uri')}?code=${data.code}&state=${data.state}`;
         }
     </script>
