--- a/services/issuer/src/authorize.html
+++ b/services/issuer/src/authorize.html
@@ -4,31 +4,22 @@
         <meta charset="UTF-8">
         <title>Issuer Authorize</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout">
-            <div class="card text-center mx-auto" style="width: 20rem; margin-top: 10vh;">
-                <div class="card-body">
-                    
-                  <h5 class="card-title">Sign in to NSW Government</h5>
-                    <form>
-                        <br>
-                        <div class="mb-3">
-                          <label for="exampleInputEmail1" class="form-label">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        </div>
-                        <div class="mb-3">
-                          <label for="exampleInputPassword1" class="form-label">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <p style="color: slategray;">The NSW Government will provide you access to request a credential.</p>
-                        <button onclick="submit()" class="btn btn-primary">Submit</button>
-                      </form>
+        <form>
+                <div>
+                    <label for="mail">Email:</label>
+                    <input type="email" id="mail"/>
                 </div>
-              </div>
-        </div>
+
+                <div>
+                    <label for="mail">Password:</label>
+                    <input type="password" id="password"/>
+                </div>
+            </form>
+            <div>
+                <button onclick="submit()">submit</button>
+            </div>
     </body>
     <script>
         async function submit() {
