--- a/services/issuer/src/authorize.html
+++ b/services/issuer/src/authorize.html
@@ -1,54 +1,114 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Issuer Authorize</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="container-xxl bd-gutter mt-3 my-md-4 bd-layout">
-            <div class="card text-center mx-auto" style="width: 20rem; margin-top: 10vh;">
-                <div class="card-body">
-                    
-                  <h5 class="card-title">Sign in to NSW Government</h5>
-                    <form>
-                        <br>
-                        <div class="mb-3">
-                          <label for="exampleInputEmail1" class="form-label">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        </div>
-                        <div class="mb-3">
-                          <label for="exampleInputPassword1" class="form-label">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <p style="color: slategray;">The NSW Government will provide you access to request a credential.</p>
-                        <button onclick="submit()" class="btn btn-primary">Submit</button>
-                      </form>
-                </div>
-              </div>
+<head>
+    <meta charset="UTF-8">
+    <title>Issuer Authorize</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+        }
+
+        .logo {
+            margin-bottom: 20px;
+        }
+
+        form {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+
+        div {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        input[type="email"],
+        input[type="password"] {
+            width: calc(100% - 20px);
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
+<body>
+    <img src="./images/image.png" alt="NSW Government Logo" class="logo">
+    <P>Sign in to NSW Goverment</P>
+    <form>
+        <div>
+            <label for="mail">Email:</label>
+            <input type="email" id="mail"/>
         </div>
-    </body>
+
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password"/>
+        </div>
+        <p style="text-align: center; color: grey;">The NSW Government Will Provide You Access To Request A Credential</p>
+        <div>
+            <button type="button" onclick="submitForm()">Submit</button>
+        </div>
+    </form>
+
     <script>
-        async function submit() {
+        async function submitForm() {
             const query = window.location.search.substring(1);
             const get_params = new URLSearchParams(query);
             console.log(get_params);
-            const resp = await fetch('/v2/authorize', {
-                method: 'POST',
-                body: JSON.stringify({
-                    client_id: get_params.get('client_id'),
-                    redirect_uri: get_params.get('redirect_uri'),
-                    state: get_params.get('state'),
-                    scope: get_params.get('scope'),
-                }),
-                headers: {
-                    'Content-Type': 'application/json',
-                }
-            });
-            const data = await resp.json();
-            window.location = `${get_params.get('redirect_uri')}?code=${data.code}&state=${data.state}`;
+
+            try {
+                const res = await fetch('/v2/authorize', {
+                    method: 'POST',
+                    mode: 'cors',
+                    redirect: 'follow',
+                    body: JSON.stringify({
+                        client_id: get_params.get('client_id'),
+                        redirect_uri: get_params.get('redirect_uri'),
+                        state: get_params.get('state'),
+                        scope: get_params.get('scope'),
+                    }),
+                    headers: {
+                        'Content-Type': 'application/json',
+                    }
+                });
+                console.log(res);
+            } catch (e) {
+                console.log(e);
+            }
         }
     </script>
+</body>
 </html>
