--- a/services/issuer/src/authorize.html
+++ b/services/issuer/src/authorize.html
@@ -1,114 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Issuer Authorize</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
+    <head>
+        <meta charset="UTF-8">
+        <title>Issuer Authorize</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <form>
+                <div>
+                    <label for="mail">Email:</label>
+                    <input type="email" id="mail"/>
+                </div>
 
-        .logo {
-            margin-bottom: 20px;
-        }
-
-        form {
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
-
-        div {
-            margin-bottom: 15px;
-        }
-
-        label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-
-        input[type="email"],
-        input[type="password"] {
-            width: calc(100% - 20px);
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-
-        button {
-            width: 100%;
-            padding: 10px;
-            background-color: #007bff;
-            border: none;
-            border-radius: 5px;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
-</head>
-<body>
-    <img src="./images/image.png" alt="NSW Government Logo" class="logo">
-    <P>Sign in to NSW Goverment</P>
-    <form>
-        <div>
-            <label for="mail">Email:</label>
-            <input type="email" id="mail"/>
-        </div>
-
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password"/>
-        </div>
-        <p style="text-align: center; color: grey;">The NSW Government Will Provide You Access To Request A Credential</p>
-        <div>
-            <button type="button" onclick="submitForm()">Submit</button>
-        </div>
-    </form>
-
+                <div>
+                    <label for="mail">Password:</label>
+                    <input type="password" id="password"/>
+                </div>
+            </form>
+            <div>
+                <button onclick="submit()">submit</button>
+            </div>
+    </body>
     <script>
-        async function submitForm() {
+        async function submit() {
             const query = window.location.search.substring(1);
             const get_params = new URLSearchParams(query);
             console.log(get_params);
-
-            try {
-                const res = await fetch('/v2/authorize', {
-                    method: 'POST',
-                    mode: 'cors',
-                    redirect: 'follow',
-                    body: JSON.stringify({
-                        client_id: get_params.get('client_id'),
-                        redirect_uri: get_params.get('redirect_uri'),
-                        state: get_params.get('state'),
-                        scope: get_params.get('scope'),
-                    }),
-                    headers: {
-                        'Content-Type': 'application/json',
-                    }
-                });
-                console.log(res);
-            } catch (e) {
-                console.log(e);
-            }
+            fetch('/v2/authorize', {
+                method: 'POST',
+                mode: 'cors',
+                redirect: 'follow',
+                body: JSON.stringify({
+                    client_id: get_params.get('client_id'),
+                    redirect_uri: get_params.get('redirect_uri'),
+                    state: get_params.get('state'),
+                    scope: get_params.get('scope'),
+                }),
+                headers: {
+                    'Content-Type': 'application/json',
+                }
+            }).then((res) => console.log(res))
+            .catch((e) => console.log(e));
         }
     </script>
-</body>
 </html>
