--- a/services/issuer/src/authorize.html
+++ b/services/issuer/src/authorize.html
@@ -106,7 +106,7 @@
                 }
             });
             const data = await resp.json();
-            window.location = `${get_params.get('redirect_uri')}?code=${data.code}&state=${data.state}`;
+            window.location.href = `${get_params.get('redirect_uri')}?code=${data.code}&state=${data.state}`;
         }
     </script>
 </html>
