--- a/services/issuer/src/authorize.html
+++ b/services/issuer/src/authorize.html
@@ -1,26 +1,70 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Issuer Authorize</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <form>
-                <div>
-                    <label for="mail">Email:</label>
-                    <input type="email" id="mail"/>
-                </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Styled Form</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        form {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        div {
+            margin-bottom: 15px;
+        }
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        input[type="email"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #28a745;
+            border: none;
+            border-radius: 4px;
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: blue;
+        }
+    </style>
+</head>
+<body>
+    <form>
+        <div>
+            <label for="mail">Email:</label>
+            <input type="email" id="mail" required/>
+        </div>
 
-                <div>
-                    <label for="mail">Password:</label>
-                    <input type="password" id="password"/>
-                </div>
-            </form>
-            <div>
-                <button onclick="submit()">submit</button>
-            </div>
-    </body>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" required/>
+        </div>
+        <button type="submit">Submit</button>
+    </form>
+</body>
     <script>
         async function submit() {
             const query = window.location.search.substring(1);
