--- a/services/issuer/src/authorize.html
+++ b/services/issuer/src/authorize.html
@@ -62,7 +62,7 @@
             <label for="password">Password:</label>
             <input type="password" id="password" required/>
         </div>
-        <button type="submit">Submit</button>
+        <button onclick="submit()">submit</button>
     </form>
 </body>
     <script>
