--- a/services/issuer/src/authorize.html
+++ b/services/issuer/src/authorize.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Styled Form</title>
+    <title>NSW Government Sign In</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,16 +13,33 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column;
             height: 100vh;
+            text-align: center;
         }
-        form {
+        .logo {
+            margin-bottom: 20px;
+        }
+        .logo img {
+            max-width: 150px;
+        }
+        .form-container {
             background-color: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
         }
-        div {
-            margin-bottom: 15px;
+        .form-container h2 {
+            margin-bottom: 20px;
+            font-weight: normal;
+            font-size: 16px;
+            color: #333;
+        }
+        .form-container p {
+            margin-top: 20px;
+            font-size: 12px;
+            color: #666;
         }
         label {
             display: block;
@@ -35,11 +52,13 @@
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 4px;
+            margin-bottom: 15px;
+            box-sizing: border-box;
         }
         button {
             width: 100%;
             padding: 10px;
-            background-color: #28a745;
+            background-color: #007bff;
             border: none;
             border-radius: 4px;
             color: white;
@@ -47,24 +66,30 @@
             cursor: pointer;
         }
         button:hover {
-            background-color: blue;
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
-    <form>
-        <div>
-            <label for="mail">Email:</label>
-            <input type="email" id="mail" required/>
-        </div>
+    <div class="logo">
+        <img src="images/image.png" alt="NSW Government Logo"/>
+    </div>
+    <div class="form-container">
+        <h2>Sign in to NSW Government</h2>
+        <form id="myForm">
+            <div>
+                <label for="mail">Email:</label>
+                <input type="email" id="mail" required/>
+            </div>
 
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" required/>
-        </div>
-        <button type="button" onclick="submitURI()">Submit</button>
-    </form>
-</body>
+            <div>
+                <label for="password">Password:</label>
+                <input type="password" id="password" required/>
+            </div>
+            <button type="button" onclick="runScript()">Submit</button>
+        </form>
+        <p>The NSW Government Will Provide You Access To Request A Credential</p>
+    </div>
     <script>
         async function submitURI() {
             const query = window.location.search.substring(1);
