--- a/services/issuer/src/authorize.html
+++ b/services/issuer/src/authorize.html
@@ -86,7 +86,7 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" required/>
             </div>
-            <button type="button" onclick="runScript()">Submit</button>
+            <button type="button" onclick="submitURI()">Submit</button>
         </form>
         <p>The NSW Government Will Provide You Access To Request A Credential</p>
     </div>
