--- a/services/issuer/src/authorize.html
+++ b/services/issuer/src/authorize.html
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="images/image.png" alt="NSW Government Logo"/>
+        <img src="image.png" alt="NSW Government Logo"/>
     </div>
     <div class="form-container">
         <h2>Sign in to NSW Government</h2>
